<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"   
    tools:context=".LevelChooser"
    android:background="@color/white">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
         >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:orientation="vertical">

            <Button
                android:id="@+id/englishLevelButton"
                android:layout_width="match_parent"
                android:layout_height="176dp"
                android:layout_margin="10dp"
                android:text="@string/EnglishButton" 
                android:onClick="goToLevel"
                android:textSize="@dimen/button_text_lang"
                android:background="@drawable/bt_lang_en"/>

            <Button
                android:id="@+id/spanishLevelButton"
                android:layout_width="match_parent"
                android:layout_height="176dp"
                android:layout_margin="10dp"
                android:text="@string/SpanishButton"
                android:onClick="goToLevel"
                android:background="@drawable/bt_lang_sp"
                android:textSize="@dimen/button_text_lang"/>

            <Button
                android:id="@+id/portugueseLevelButton"
                android:layout_width="match_parent"
                android:layout_height="176dp"
                android:layout_margin="10dp"
                android:text="@string/PortButton"
                android:onClick="goToLevel"
                android:textSize="@dimen/button_text_lang"
                android:background="@drawable/bt_lang_pt"/>

            <Button
                    android:id="@+id/frenchLevelButton"
                    android:layout_width="match_parent"
                    android:layout_height="176dp"
                    android:layout_margin="10dp"
                    android:text="@string/FrenchButton"
                    android:onClick="goToLevel"
                    android:textSize="@dimen/button_text_lang"
                    android:background="@drawable/bt_lang_fr"
                    android:textColorHint="@color/blue"
                    android:textColorLink="@color/red"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>